# python-developer-knowledge-base

./: 404.html  Makefile  index.html  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: main.yml
docs/: index.md  solid.md
knowledge-base/: mkdocs.yml
search/: search_index.json
site/search/: search_index.json
site/stylesheets/: extra.css
solid/: index.html
